# calc

./: .gitignore  CMakeLists.txt  calc.py
src/: main.cpp
